@@ -4958,3 +4958,7 @@ Changelog for GXemul:
 20210220	Implementing mouse emulation support for the LUNA88K machine.
 		Updating OpenBSD/sgi install instructions (6.5 -> 6.8),
 		and including a screenshot of X11 running.
+20210221	Handle return values from interrupted select() when checking
+		for available console input. (Found when using CTRL-C on Linux
+		to enter the debugger command line, and noticed that it was
+		spuriously broken.)
